--- a/index.html
+++ b/index.html
@@ -2313,24 +2313,24 @@
       </li>
       <li class="tocline"><a class="tocxref" href="#basic-concepts"><bdi class="secno">4. </bdi>基本概念</a>
         <ol class="toc">
-          <li class="tocline"><a class="tocxref" href="#generatedID-1"><bdi class="secno">4.1 </bdi>上下文</a></li>
-          <li class="tocline"><a class="tocxref" href="#generatedID-2"><bdi class="secno">4.2 </bdi>标识符</a></li>
-          <li class="tocline"><a class="tocxref" href="#generatedID-3"><bdi class="secno">4.3 </bdi>类型</a></li>
-          <li class="tocline"><a class="tocxref" href="#generatedID-4"><bdi class="secno">4.4 </bdi>凭证主体</a></li>
-          <li class="tocline"><a class="tocxref" href="#generatedID-5"><bdi class="secno">4.5 </bdi>
+          <li class="tocline"><a class="tocxref" href="#contexts"><bdi class="secno">4.1 </bdi>上下文</a></li>
+          <li class="tocline"><a class="tocxref" href="#identifiers"><bdi class="secno">4.2 </bdi>标识符</a></li>
+          <li class="tocline"><a class="tocxref" href="#types"><bdi class="secno">4.3 </bdi>类型</a></li>
+          <li class="tocline"><a class="tocxref" href="#credential-subject"><bdi class="secno">4.4 </bdi>凭证主体</a></li>
+          <li class="tocline"><a class="tocxref" href="#issuer"><bdi class="secno">4.5 </bdi>
               签发者
             </a></li>
-          <li class="tocline"><a class="tocxref" href="#generatedID-6"><bdi class="secno">4.6 </bdi>
+          <li class="tocline"><a class="tocxref" href="#issuance-date"><bdi class="secno">4.6 </bdi>
               签发日期
             </a></li>
           <li class="tocline"><a class="tocxref" href="#proofs-signatures"><bdi class="secno">4.7 </bdi>证明（签名）</a></li>
-          <li class="tocline"><a class="tocxref" href="#generatedID-8"><bdi class="secno">4.8 </bdi>
+          <li class="tocline"><a class="tocxref" href="#expiration"><bdi class="secno">4.8 </bdi>
               过期
             </a></li>
-          <li class="tocline"><a class="tocxref" href="#generatedID-9"><bdi class="secno">4.9 </bdi>
+          <li class="tocline"><a class="tocxref" href="#status"><bdi class="secno">4.9 </bdi>
               状态
             </a></li>
-          <li class="tocline"><a class="tocxref" href="#generatedID-10"><bdi class="secno">4.10 </bdi>
+          <li class="tocline"><a class="tocxref" href="#presentations-0"><bdi class="secno">4.10 </bdi>
               展示
             </a>
             <ol class="toc"></ol>
@@ -3771,7 +3771,7 @@
     <section id="contexts">
       <div class="header-wrapper">
         <h3 class="informative" id="x4-1"><bdi class="secno">4.1 </bdi>上下文</h3><a class="self-link"
-          href="#generatedID-1" aria-label="Permalink for Section 4.1"></a>
+          href="#contexts" aria-label="Permalink for Section 4.1"></a>
       </div>
 
 
@@ -3883,7 +3883,7 @@
     <section id="#identifiers">
       <div class="header-wrapper">
         <h3 class="informative" id="x4-2"><bdi class="secno">4.2 </bdi>标识符</h3><a class="self-link"
-          href="#generatedID-2" aria-label="Permalink for Section 4.2"></a>
+          href="#identifiers" aria-label="Permalink for Section 4.2"></a>
       </div>
 
       <p>当我们需要描述特定事物（例如个人、产品或组织）的相关信息时，使用某种标识符以便他人也能针对同一事物进行描述，是非常有用的。本规范定义了用于此类标识符的可选<code>id</code><a
@@ -4003,7 +4003,7 @@
     </section>
     <section id="#types">
       <div class="header-wrapper">
-        <h3 id="x4-3"><bdi class="secno">4.3 </bdi>类型</h3><a class="self-link" href="#generatedID-3"
+        <h3 id="x4-3"><bdi class="secno">4.3 </bdi>类型</h3><a class="self-link" href="#types"
           aria-label="Permalink for Section 4.3"></a>
       </div>
 
@@ -4247,7 +4247,7 @@ NNSyqLj9ZTDYeoyg</pre>
     </section>
     <section id="#credential-subject">
       <div class="header-wrapper">
-        <h3 id="x4-4"><bdi class="secno">4.4 </bdi>凭证主体</h3><a class="self-link" href="#generatedID-4"
+        <h3 id="x4-4"><bdi class="secno">4.4 </bdi>凭证主体</h3><a class="self-link" href="#credential-subject"
           aria-label="Permalink for Section 4.4"></a>
       </div>
 
@@ -4411,7 +4411,7 @@ kPBYkx_dfLJnQ7NA</pre>
       <div class="header-wrapper">
         <h3 id="x4-5"><bdi class="secno">4.5 </bdi>
           签发者
-        </h3><a class="self-link" href="#generatedID-5" aria-label="Permalink for Section 4.5"></a>
+        </h3><a class="self-link" href="#issuer" aria-label="Permalink for Section 4.5"></a>
       </div>
 
       <p>
@@ -4663,7 +4663,7 @@ TpGsJ7-bPr6NFUh426Yzx5kc5cEh-a0JPPYBqM6jyrgmyvzA</pre>
       <div class="header-wrapper">
         <h3 id="x4-6"><bdi class="secno">4.6 </bdi>
           签发日期
-        </h3><a class="self-link" href="#generatedID-6" aria-label="Permalink for Section 4.6"></a>
+        </h3><a class="self-link" href="#issuance-date" aria-label="Permalink for Section 4.6"></a>
       </div>
 
       <p>
@@ -4881,7 +4881,7 @@ chO2Ng</pre>
       <div class="header-wrapper">
         <h3 id="x4-8"><bdi class="secno">4.8 </bdi>
           过期
-        </h3><a class="self-link" href="#generatedID-8" aria-label="Permalink for Section 4.8"></a>
+        </h3><a class="self-link" href="#expiration" aria-label="Permalink for Section 4.8"></a>
       </div>
 
       <p>
@@ -5019,7 +5019,7 @@ gls2xrn00dp5JX7UBzEPauEOTWhtMjR-omIIhVHBBI4-ksHH5F6nFHuKo6pDu7W8c-i_knDTlRr
       <div class="header-wrapper">
         <h3 id="x4-9"><bdi class="secno">4.9 </bdi>
           状态
-        </h3><a class="self-link" href="#generatedID-9" aria-label="Permalink for Section 4.9"></a>
+        </h3><a class="self-link" href="#status" aria-label="Permalink for Section 4.9"></a>
       </div>
 
       <p>
@@ -5174,7 +5174,7 @@ S9P9l67J1wWHf0QCyt5hyuA8ckM4seV-1TRbeiHwdJ3VRkDMcwFcg</pre>
       <div class="header-wrapper">
         <h3 id="x4-10"><bdi class="secno">4.10 </bdi>
           展示
-        </h3><a class="self-link" href="#generatedID-10" aria-label="Permalink for Section 4.10"></a>
+        </h3><a class="self-link" href="#presentations-0" aria-label="Permalink for Section 4.10"></a>
       </div>
 
       <p>
