--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="zh-hans" dir="ltr">
 
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
