--- a/index.html
+++ b/index.html
@@ -1212,7 +1212,7 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
       opacity: 1
     }
   </style>
-  <script type="text/javascript">
+  <script >
     /**
 * Displays a Verifiable Credential example given an element that contains
 * PRE tags and an elementClass to match against and display.
