--- a/index.html
+++ b/index.html
@@ -1878,7 +1878,7 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
           </bdi>上下文、类型与凭证模式</a>
         <ol class="toc">
           <li class="tocline"><a class="tocxref" href="#base-context"><bdi class="secno">B.1 </bdi>基础上下文</a></li>
-          <li class="tocline"><a class="tocxref" href="#differences-between-contexts, types, and-credentialSchemas"><bdi
+          <li class="tocline"><a class="tocxref" href="#differences-between-contexts-types-and-credentialschemas"><bdi
                 class="secno">B.2 </bdi>上下文、类型和凭证模式之间的区别</a></li>
         </ol>
       </li>
@@ -7740,10 +7740,10 @@ BjYgP62KvhIvW8BbkGUelYMetA</pre>
 }</pre>
       </aside>
     </section>
-    <section class="informative" id="differences-between-contexts, types, and-credentialSchemas">
+    <section class="informative" id="differences-between-contexts-types-and-credentialschemas">
       <div class="header-wrapper">
         <h3 id="b-2"><bdi class="secno">B.2 </bdi>上下文、类型和凭证模式之间的区别</h3><a class="self-link"
-          href="#differences-between-contexts, types, and-credentialSchemas"
+          href="#differences-between-contexts-types-and-credentialschemas"
           aria-label="Permalink for Appendix B.2"></a>
       </div>
       <p><em>本章节不包含规范性内容。</em></p>
