--- a/index.html
+++ b/index.html
@@ -3282,7 +3282,7 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
         href="https://www.w3.org/2018/credentials/">https://www.w3.org/2018/credentials/</a>上找到。这个概念将在<a
         href="#extensibility" class="sec-ref"><bdi class="secno">5.3</bdi>可扩展性</a>中进一步展开。
     </section>
-    <section id="#identifiers">
+    <section id="identifiers">
       <div class="header-wrapper">
         <h3 class="informative" id="x4-2"><bdi class="secno">4.2 </bdi>标识符</h3><a class="self-link" href="#identifiers"
           aria-label="Permalink for Section 4.2"></a>
@@ -3393,7 +3393,7 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
         </p>
       </div>
     </section>
-    <section id="#types">
+    <section id="types">
       <div class="header-wrapper">
         <h3 id="x4-3"><bdi class="secno">4.3 </bdi>类型</h3><a class="self-link" href="#types"
           aria-label="Permalink for Section 4.3"></a>
@@ -3572,7 +3572,7 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
             id="ref-for-dfn-verifiable-credentials-111">可验证凭证</a>实施指南[VC-IMP-GUIDE]中关于类型的章节。</p>
       </div>
     </section>
-    <section id="#credential-subject">
+    <section id="credential-subject">
       <div class="header-wrapper">
         <h3 id="x4-4"><bdi class="secno">4.4 </bdi>凭证主体</h3><a class="self-link" href="#credential-subject"
           aria-label="Permalink for Section 4.4"></a>
@@ -3665,7 +3665,7 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
 }</pre>
       </aside>
     </section>
-    <section id="#issuer">
+    <section id="issuer">
       <div class="header-wrapper">
         <h3 id="x4-5"><bdi class="secno">4.5 </bdi>
           签发者
@@ -3771,7 +3771,7 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
         </p>
       </div>
     </section>
-    <section id="#issuance-date">
+    <section id="issuance-date">
       <div class="header-wrapper">
         <h3 id="x4-6"><bdi class="secno">4.6 </bdi>
           签发日期
@@ -3921,7 +3921,7 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
         </p>
       </div>
     </section>
-    <section id="#expiration">
+    <section id="expiration">
       <div class="header-wrapper">
         <h3 id="x4-8"><bdi class="secno">4.8 </bdi>
           过期
@@ -3986,7 +3986,7 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
         </p>
       </div>
     </section>
-    <section id="#status">
+    <section id="status">
       <div class="header-wrapper">
         <h3 id="x4-9"><bdi class="secno">4.9 </bdi>
           状态
@@ -4063,7 +4063,7 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
           id="ref-for-dfn-verifiable-credentials-123">可验证凭证</a>状态检查的实施者使用。
       </p>
     </section>
-    <section id="#presentations-0">
+    <section id="presentations-0">
       <div class="header-wrapper">
         <h3 id="x4-10"><bdi class="secno">4.10 </bdi>
           展示
