--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@
       }
     }
   </style>
+  <!-- 是谁把css删了 -->
   <style>
     pre .highlight {
       font-weight: bold;
@@ -494,6 +495,7 @@
       user-select: none;
     }
   </style>
+  <!-- 不是我干的 -->
   <meta name="description" content="Credentials are a part of our daily lives; driver's licenses are used to
 assert that we are capable of operating a motor vehicle, university degrees
 can be used to assert our level of education, and government-issued passports
@@ -1535,6 +1537,7 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
 </head>
 
 <body class="h-entry informative">
+  
   <div class="head">
     <p class="logos"><a class="logo" href="https://www.w3.org/"><img crossorigin="" alt="W3C" height="48"
           src="https://www.w3.org/StyleSheets/TR/2021/logos/W3C" width="72">
@@ -1638,14 +1641,15 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
       <a href="https://www.w3.org/policies/#W3C_Trademarks">trademark</a> and
       <a rel="license" href="https://www.w3.org/copyright/software-license-2023/"
         title="W3C Software and Document Notice and License">permissive document license</a> rules apply.
-    </p>
+      <!-- f4 陈贺、刘钥璞、秦靖辉、苏月正 -->
+      </p>
     <hr title="Separator for header">
   </div>
-
+  
   <section id="abstract" class="introductory">
     <h2>摘要</h2>
 
-    <p>
+    <p><!-- 贺 -->
       <a data-link-type="dfn|abstract-op" href="#dfn-credential" class="internalDFN"
         id="ref-for-dfn-credential-1">凭证</a>是我们日常生活的一部分：驾驶证用来证明我们有能力驾驶机动车，大学学位证被用来证明我们的受教育程度，政府签发的护照让我们能够在不同国家之间旅行。本规范提供了一种机制，可以在Web上以加密安全、隐私保护和机器可验证的方式表达这些<a
         data-link-type="dfn|abstract-op" href="#dfn-credential" class="internalDFN"
@@ -3161,12 +3165,13 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
 
     </section>
   </section>
+  
   <section class="informative" id="basic-concepts">
     <div class="header-wrapper">
       <h2 id="x4"><bdi class="secno">4. </bdi>基本概念</h2><a class="self-link" href="#basic-concepts"
         aria-label="Permalink for Section 4."></a>
     </div>
-    <p><em>本章节不包含规范性内容。</em></p>
+    <p><!-- 刘 --><em>本章节不包含规范性内容。</em></p>
 
     <p>本节介绍规范的一些基本概念，为文档后面的<a href="#advanced-concepts" class="sec-ref"><bdi class="secno">5.</bdi>高级概念</a>做准备。</p>
     <section id="contexts">
@@ -3472,7 +3477,7 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
 
       <table class="simple" id="vc-table">
         <!-- <caption>表 1：<a data-link-type="dfn|abstract-op" href="#dfn-verifiable-credentials" class="internalDFN"
-            id="ref-for-dfn-verifiable-credentials-106">可验证凭证</a>字段说明</caption> -->
+            id="ref-for-dfn-verifiable-credentials-106">可验证凭证</a>字段说明</caption> 就先留着不删了 -->
         <thead>
           <tr>
             <th>对象</th>
@@ -5146,13 +5151,14 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
       </p>
     </section>
   </section>
+  
   <section id="syntaxes">
     <div class="header-wrapper">
       <h2 id="x6"><bdi class="secno">6. </bdi>语法</h2><a class="self-link" href="#syntaxes"
         aria-label="Permalink for Section 6."></a>
     </div>
 
-    <p>
+    <p><!-- 秦 -->
       <a href="#core-data-model" class="sec-ref"><bdi class="secno">3. </bdi>核心数据模型</a>、<a href="#basic-concepts"
         class="sec-ref"><bdi class="secno">4. </bdi>基本概念</a>和<a href="#advanced-concepts" class="sec-ref"><bdi
           class="secno">5. </bdi>高级概念</a>中描述的数据模型是<a data-link-type="dfn|abstract-op" href="#dfn-verifiable-credentials"
@@ -6855,12 +6861,13 @@ BjYgP62KvhIvW8BbkGUelYMetA</pre>
 
 
   </section>
+  
   <section class="informative" id="security-considerations">
     <div class="header-wrapper">
       <h2 id="x8"><bdi class="secno">8. </bdi>安全注意事项</h2><a class="self-link" href="#security-considerations"
         aria-label="Permalink for Section 8."></a>
     </div>
-    <p><em>本章节不包含规范性内容。</em></p>
+    <p><em>本章节不包含规范性内容。</em><!-- 苏 --></p>
 
 
     <p>
@@ -6872,6 +6879,7 @@ BjYgP62KvhIvW8BbkGUelYMetA</pre>
 
     <p>
       虽然本节试图强调广泛的安全注意事项，但它并非详尽无遗。强烈建议实施者在使用本规范概述的技术实施关键任务系统时，寻求安全和密码学专家的建议。
+      <!-- 开始堆bug -->
     </p>
 
     <section class="informative" id="cryptography-suites-and-libraries">
@@ -8314,6 +8322,7 @@ BjYgP62KvhIvW8BbkGUelYMetA</pre>
         规范文档：可验证凭证数据模型1.0第6.3.1.2节：JSON Web Token扩展
       </li>
     </ul>
+  <!-- example的例子点不动啦 别动js、别动js、别动js！！！ -->
   </section>
   <section id="revision-history">
     <div class="header-wrapper">
