--- a/index.html
+++ b/index.html
@@ -2325,15 +2325,15 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
 
 
       <p>
-        <dfn id="dfn-conforming-document|符合规范的文档" tabindex="0" aria-haspopup="dialog"
+        <dfn id="dfn-conforming-document" tabindex="0" aria-haspopup="dialog"
           data-dfn-type="dfn">符合规范的文档</dfn>是符合本规范中规范性声明的数据模型的任何具体表达。具体来说，本文档第<a href="#basic-concepts"
           class="sec-ref"><bdi class="secno">4.</bdi>基本概念</a>、<a href="#advanced-concepts" class="sec-ref"><bdi
             class="secno">5.</bdi>高级概念</a>和<a href="#syntaxes" class="sec-ref"><bdi
             class="secno">6.</bdi>语法</a>中的所有相关规范性声明<em class="rfc2119">必须</em> 强制执行。<a data-link-type="dfn|abstract-op"
-          href="#dfn-conforming-document|符合规范的文档" class="internalDFN"
+          href="#dfn-conforming-document" class="internalDFN"
           id="ref-for-dfn-conforming-document|符合规范的文档-1">符合规范的文档</a>的序列化格式 <em class="rfc2119">必须</em>
         如第<a href="#syntaxes" class="sec-ref"><bdi class="secno">6.</bdi>语法</a>中所述，是确定性的、双向的和无损的。<a
-          data-link-type="dfn|abstract-op" href="#dfn-conforming-document|符合规范的文档" class="internalDFN"
+          data-link-type="dfn|abstract-op" href="#dfn-conforming-document" class="internalDFN"
           id="ref-for-dfn-conforming-document|符合规范的文档-2">符合规范的文档</a><em class="rfc2119">可以</em> 以任何此类序列化格式传输或存储。
       </p>
 
@@ -2342,7 +2342,7 @@ cryptographically secure, privacy respecting, and machine-verifiable.">
         <dfn id="dfn-conforming-processor|符合规范的处理器" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn"
           class="lint-ignore"
           title="Found definition for &quot;符合规范的处理器&quot;, but nothing links to it. This is usually a spec bug!">符合规范的处理器</dfn>是以软件和/或硬件实现的任何算法，用于生成或使用<a
-          data-link-type="dfn|abstract-op" href="#dfn-conforming-document|符合规范的文档" class="internalDFN"
+          data-link-type="dfn|abstract-op" href="#dfn-conforming-document" class="internalDFN"
           id="ref-for-dfn-conforming-document|符合规范的文档-3">符合规范的文档</a>。当使用不符合规范的文档时，符合规范的处理器<em class="rfc2119">必须</em>
         产生错误。
       </p>
@@ -8607,7 +8607,7 @@ BjYgP62KvhIvW8BbkGUelYMetA</pre>
     aria-label="Links in this document to definition: 符合规范的文档">
     <span class="caret"></span>
     <div>
-      <a class="self-link" href="#dfn-conforming-document|符合规范的文档"
+      <a class="self-link" href="#dfn-conforming-document"
         aria-label="Permalink for definition: 符合规范的文档. Activate to close this dialog.">Permalink</a>
 
     </div>
